# sglawwatch-zeeker

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  test_about_singapore_law_fragments.py  test_commentaries.py  test_headlines.py  todo.md  zeeker.toml
.github/: README.md  test-workflow-locally.sh
.github/workflows/: backup-database.yml  build-and-deploy.yml  deploy-about-singapore-law.yml  health-check.yml  sync-headlines.yml
resources/: about_singapore_law.py  commentaries.py  headlines.py
sglawwatch-ui/: metadata.json
sglawwatch-ui/static/: custom.css  custom.js
sglawwatch-ui/templates/: database-sglawwatch.html
