[project]
name = "sglawwatch-zeeker"
version = "0.1.0"
description = "Zeeker database project for sglawwatch-zeeker"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "feedparser>=6.0.11",
    "httpx>=0.28.1",
    "openai>=1.99.6",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-dotenv>=0.5.2",
    "tenacity>=9.1.2",
    "zeeker",
]
requires-python = ">=3.12"

[dependency-groups]
dev = ["black>=25.1.0", "ruff>=0.8.0"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]  # Focus on essential errors, warnings, and imports
ignore = ["E501"]  # Line too long (handled by black)

